tests/__snapshots__/validation-tsconfig-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'tsconfig' option must be a string.

  1 | {
  2 |   "tsconfig": 123
    |               ~~~
  3 | }

      at ./tstyche.json:2:15

